adl-frontend/src/test/resources/unit/error/semantic/adlRefs/ref3.adl
//#SemanticError GroupId=ADL ErrorId=ADL_NOT_FOUND line=6

composite adlRefs.ref3
{
  contains 
  foo.unknownADL
  as c;
}
